--- a/css/custom.css
+++ b/css/custom.css
@@ -11,6 +11,9 @@
   font-family: "Calibri";
   font-size: 14px; }
 
+main {
+  margin-bottom: 60px; }
+
 .layout {
   max-width: 1000px;
   margin: 0 auto; }
@@ -134,6 +137,10 @@ input, select {
             margin: 0 3px;
             padding: 5px 20px;
             height: 30px; }
+        #modal .modal-content .modal-body .group-content {
+          margin-top: 5px;
+          text-align: center;
+          font-size: 16px; }
   #modal .modal-h {
     height: 40px; }
     #modal .modal-h .message {
