--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -11,6 +11,9 @@
   font-family: "Calibri";
   font-size: 14px;
 }
+main{
+  margin-bottom: 60px;
+}
 .layout{
   max-width: 1000px;
   margin: 0 auto;
@@ -160,6 +163,11 @@ input,select{
             padding:5px 20px;
             height: 30px;
           }
+        }
+        &-content{
+          margin-top:5px;
+          text-align: center;
+          font-size: 16px;
         }
       }
     }
